# forge-finance-solana

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  README.md  auto-deploy.sh  next.config.dev.js  next.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json
audit/: README.md  UPLOAD_INSTRUCTIONS.md
audit/forge-core/: lib.rs
audit/forge-crucibles/: ctoken.rs  lib.rs  lp.rs  lvf.rs  state.rs
audit/forge-crucibles/instructions/: mod.rs
docs/: DEPLOYMENT_STATUS.md  PROJECT_DOCUMENTATION.md  ctoken-lvf-integration.md
migrations/: deploy_lending.ts
programs/forge-core/: Cargo.toml  Cargo.toml.bak
programs/forge-core/src/: lib.rs
programs/forge-crucibles/: Cargo.toml  Cargo.toml.bak
programs/forge-crucibles-inferno/: Cargo.toml
programs/forge-crucibles-inferno/src/: lib.rs  lp.rs  metadata.rs  state.rs
programs/forge-crucibles/src/: ctoken.rs  lib.rs  lp.rs  lvf.rs  metadata.rs  state.rs
programs/lending/: Cargo.toml  Cargo.toml.bak
programs/lending-pool/: Cargo.toml  Cargo.toml.bak
programs/lending-pool/src/: lib.rs
programs/lending/src/: lib.rs  state.rs
programs/lvf/: Cargo.toml  Cargo.toml.bak
programs/lvf/src/: lib.rs
scripts/: add-csol-metadata.ts  build-with-docker.sh  build-with-solana-docker.sh  create-lp-token-mint.ts  deploy-all-devnet.sh  deploy-comprehensive-mock.sh  deploy-devnet.sh  deploy-frontend-only.sh  deploy-security-fixes.sh  deploy-solana-testnet.sh  deploy-testnet-security-fixes.sh  deposit-sol-crucible.ts  fetch-csol-mint.ts  init-inferno-crucible-manual.ts  init-inferno-crucible.ts  init-lending-pool.ts  init-lending-vault.ts  init-sol-crucible.ts  list-user-tokens.ts  update-anchor-config.sh  update-idl-after-deployment.sh  withdraw-sol-crucible.ts
sdk/src/core/: index.ts
src/components/: AnalyticsDashboard.tsx  CTokenDepositModal.tsx  CTokenPortfolio.tsx  CTokenPriceChart.tsx  CTokenWithdrawModal.tsx  ClosePositionModal.tsx  CrucibleManager.tsx  DemoClient.tsx  FogoSessions.tsx  Header.tsx  InfernoLPPositionModal.tsx  LPPositionModal.tsx  LVFPositionCard.tsx  LVFPositionModal.tsx  LeverageControl.tsx  LeveragedProjectionChart.tsx  PhantomWalletButton.tsx  SimpleStats.tsx  VolatilityFarmingMetrics.tsx  WalletButton.tsx  WalletErrorBoundary.tsx
src/config/: fees.ts  solana-testnet.ts
src/contexts/: AnalyticsContext.tsx  BalanceContext.tsx  CrucibleContext.tsx  PriceContext.tsx  SolanaWalletAdapterProvider.tsx  WalletContext.tsx
src/contracts/: lendingPool.ts
src/hooks/: useCToken.ts  useCrucible.tsx  useInfernoLP.ts  useLP.ts  useLPBalance.ts  useLVFPosition.ts  useLending.ts  useLeverage.ts  usePhantomWallet.ts
src/idl/: forge-core.json  forge-crucibles-inferno.json  forge-crucibles.json  forge-crucibles.json.backup  lending-pool.json
src/mocks/: cruciblesExtended.ts
src/pages/: _app.tsx  docs.tsx
src/pages/lending/: index.tsx
src/shims/: transaction-messages.js
src/styles/: globals.css
src/types/: solana.d.ts
src/utils/: anchorProgram.ts  apyCalculations.ts  crucibleFetcher.ts  cruciblePdas.ts  finance.ts  infernoPdas.ts  infernoProgram.ts  lendingProgram.ts  localStorage.ts  math.ts  oracle.ts  positionFetcher.ts  rateLimiter.ts  transactionFees.ts  usdcFaucet.ts  validation.ts  volatilityFarming.ts  walletUtils.ts
tests/: pforge-pusdc-mvp.test.ts  security-fixes.test.ts
tools/keeper/: keeper.ts
