[workspace]
members = [
    "programs/forge-core",
    "programs/forge-crucibles",
    "programs/forge-crucibles-inferno",
    "programs/lending",
    "programs/lending-pool",
    "programs/lvf",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
