[package]
name = "forge-crucibles-inferno"
version = "0.1.0"
description = "Forge Protocol Inferno Crucibles - LP with leverage"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "forge_crucibles_inferno"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0", features = ["metadata"] }
lending-pool = { path = "../lending-pool", features = ["cpi"] }
mpl-token-metadata = "4.1.2"
pyth-solana-receiver-sdk = "0.6.1"
