[package]
name = "forge-crucibles"
version = "0.1.0"
description = "Forge Protocol Crucibles - Token vaults for user deposits"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "forge_crucibles"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0", features = ["metadata"] }
lending-pool = { path = "../lending-pool", features = ["cpi"] }
mpl-token-metadata = "4.1.2"
